# project-k-backend-service

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
cloudplatform/: main.py  scheduler.py
cloudplatform/api/: admin.py  commands.py  dashboard.py  ingest.py  telemetry.py  test_mode.py  watermarks.py
cloudplatform/db/: database.py  models.py
